# security_study

./: .gitignore  .gitmodules  README.md
.claude/commands/: commit.md
caliptra_project/: README.md
caliptra_project/caliptra_comms/: Cargo.toml
caliptra_project/caliptra_comms/src/: certs.rs  crypto.rs  info.rs  main.rs  ocp_lock.rs  pcr.rs  runner.rs
caliptra_project/docs/: api_attestation.md  api_auth.md  api_boot.md  api_crypto.md  api_lock.md  api_measurement.md  api_overview.md  caliptra_api_reference.md
caliptra_project/include/: caliptra_crypto_ext.h  caliptra_driver.h  caliptra_lock.h  caliptra_lock_types.h  caliptra_mbox.h  caliptra_regs.h  caliptra_types.h
caliptra_project/src/: caliptra_crypto_ext.c  caliptra_driver.c  caliptra_example.c  caliptra_lock.c
